--- a/vapor.yml
+++ b/vapor.yml
@@ -2,6 +2,23 @@ id: 22022
 name: a-and-c-cars
 environments:
     production:
+        domain: aandccars.co.uk
+        memory: 1024
+        cli-memory: 512
+        runtime: 'php-8.0:al2'
+        build:
+            - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
+            - 'php artisan event:cache'
+            - 'npm ci && npm run prod && rm -rf node_modules'
+    pull:
+        memory: 1024
+        cli-memory: 512
+        runtime: 'php-8.0:al2'
+        build:
+            - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
+            - 'php artisan event:cache'
+            - 'npm ci && npm run prod && rm -rf node_modules'
+    push:
         memory: 1024
         cli-memory: 512
         runtime: 'php-8.0:al2'
@@ -17,5 +34,4 @@ environments:
             - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install'
             - 'php artisan event:cache'
             - 'npm ci && npm run dev && rm -rf node_modules'
-        deploy:
-#            - 'php artisan migrate --force'
+        deploy: null
